<resources>
    <string name="app_name">ContactSelection</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="lblName">Nombre de Contacto</string>
    <string name="txtNameHint">Ingrese el Nombre de Contacto</string>

    <string name="lblPhone">Numero de Telefono</string>
    <string name="txtPhoneHint">Ingrese Numero de telefono</string>

    <string name="lblWebSite">Sitio Web</string>
    <string name="txtWebSiteHint">Ingrese website</string>

    <string name="title_activity_contact_page">ContactPageActivity</string>





</resources>
